--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -29,7 +29,7 @@
         android:layout_width="0dp"
         android:layout_height="49dp"
         android:layout_marginTop="52dp"
-        android:background="@color/ButtonBackground"
+        android:background="@drawable/button_background_switcher"
         android:elevation="0dp"
         android:onClick="toTheGame"
         android:text="@string/play"
@@ -46,7 +46,7 @@
         android:layout_width="0dp"
         android:layout_height="44dp"
         android:layout_marginTop="15dp"
-        android:background="@color/ButtonBackground"
+        android:background="@drawable/button_background_switcher"
         android:onClick="toTheSettings"
         android:text="@string/settings"
         android:textColor="@android:color/background_light"
@@ -62,7 +62,7 @@
         android:layout_width="0dp"
         android:layout_height="44dp"
         android:layout_marginTop="15dp"
-        android:background="@color/ButtonBackground"
+        android:background="@drawable/button_background_switcher"
         android:onClick="toTheHighscores"
         android:text="@string/highscore"
         android:textColor="@android:color/background_light"
@@ -77,7 +77,7 @@
         android:layout_width="0dp"
         android:layout_height="50dp"
         android:layout_marginTop="15dp"
-        android:background="@color/ButtonBackground"
+        android:background="@drawable/button_background_switcher"
         android:onClick="toTheAbout"
         android:text="@string/about"
         android:textColor="@android:color/background_light"
