--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -40,7 +40,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="50dp"
-        android:background="@color/ButtonBackground"
+        android:background="@drawable/button_background_switcher"
         android:elevation="0dp"
         android:onClick="toTheProfile"
         android:text="@string/profile"
@@ -57,7 +57,7 @@
         android:layout_width="0dp"
         android:layout_height="45dp"
         android:layout_marginTop="15dp"
-        android:background="@color/ButtonBackground"
+        android:background="@drawable/button_background_switcher"
         android:onClick="toggleSoundOnClick"
         android:contentDescription="@string/sound_on_off_button"
         app:layout_constraintEnd_toEndOf="parent"
