--- a/app/src/main/res/layout/activity_edit_statement.xml
+++ b/app/src/main/res/layout/activity_edit_statement.xml
@@ -129,7 +129,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginBottom="48dp"
-        android:background="@color/ButtonBackground"
+        android:background="@drawable/button_background_switcher"
         android:onClick="editButtonEditClicked"
         android:text="@string/Edit"
         android:textColor="@android:color/background_light"
