--- a/app/src/main/res/layout/activity_result.xml
+++ b/app/src/main/res/layout/activity_result.xml
@@ -60,8 +60,8 @@
         android:textColor="@android:color/white"
         android:textSize="15sp"
         android:textStyle="bold"
-        app:layout_constraintEnd_toEndOf="@+id/amount_of_correct_answers"
-        app:layout_constraintStart_toStartOf="@+id/amount_of_correct_answers"
+        app:layout_constraintEnd_toEndOf="@+id/amount_of_points"
+        app:layout_constraintStart_toStartOf="@+id/amount_of_points"
         tools:layout_editor_absoluteY="138dp" />
 
     <TextView
@@ -73,46 +73,48 @@
         android:textColor="@android:color/white"
         android:textSize="15sp"
         android:textStyle="bold"
-        app:layout_constraintEnd_toEndOf="@+id/amount_of_points"
-        app:layout_constraintStart_toStartOf="@+id/amount_of_points"
+        app:layout_constraintEnd_toEndOf="@+id/amount_of_correct_answers"
+        app:layout_constraintStart_toStartOf="@+id/amount_of_correct_answers"
         tools:layout_editor_absoluteY="138dp" />
 
     <TextView
         android:id="@+id/save_amount_of_statements_result"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="45dp"
         android:textColor="@android:color/white"
         android:textSize="60sp"
         android:textStyle="bold"
+        android:layout_marginTop="20dp"
         app:layout_constraintStart_toStartOf="parent"
-        tools:layout_editor_absoluteY="184dp"
+        app:layout_constraintRight_toLeftOf="@+id/amount_of_points"
+        app:layout_constraintTop_toBottomOf="@+id/textView"
         tools:text="5" />
 
     <TextView
         android:id="@+id/amount_of_correct_answers"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="8dp"
-        android:layout_marginStart="8dp"
+        android:layout_marginTop="20dp"
+        android:layout_marginLeft="0dp"
         android:textColor="@android:color/white"
         android:textSize="60sp"
         android:textStyle="bold"
-        app:layout_constraintEnd_toStartOf="@+id/amount_of_points"
-        app:layout_constraintStart_toEndOf="@+id/save_amount_of_statements_result"
-        tools:layout_editor_absoluteY="184dp"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/amount_of_points"
+        app:layout_constraintTop_toBottomOf="@+id/textView3"
         tools:text="5" />
 
     <TextView
         android:id="@+id/amount_of_points"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="45dp"
+        android:layout_marginTop="20dp"
         android:textColor="@android:color/white"
         android:textSize="60sp"
         android:textStyle="bold"
-        app:layout_constraintEnd_toEndOf="parent"
-        tools:layout_editor_absoluteY="184dp"
+        app:layout_constraintRight_toLeftOf="@+id/amount_of_correct_answers"
+        app:layout_constraintLeft_toRightOf="@+id/save_amount_of_statements_result"
+        app:layout_constraintTop_toBottomOf="@+id/textView2"
         tools:text="5" />
 
     <EditText
