--- a/app/src/main/res/layout/activity_countdown_splash.xml
+++ b/app/src/main/res/layout/activity_countdown_splash.xml
@@ -51,7 +51,8 @@
         android:id="@+id/text_get_ready"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="32dp"
+        android:layout_marginTop="28dp"
+        android:textAlignment="center"
         android:textColor="@android:color/white"
         android:textSize="50sp"
         android:textStyle="bold"
