--- a/app/src/main/res/layout/activity_result.xml
+++ b/app/src/main/res/layout/activity_result.xml
@@ -42,6 +42,7 @@
         android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
         android:text="@string/statements"
         android:textAlignment="center"
         android:textColor="@android:color/white"
@@ -49,25 +50,27 @@
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="@+id/save_amount_of_statements_result"
         app:layout_constraintStart_toStartOf="@+id/save_amount_of_statements_result"
-        tools:layout_editor_absoluteY="138dp" />
+        app:layout_constraintTop_toBottomOf="@+id/played_category" />
 
     <TextView
         android:id="@+id/textView3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/points_colon"
+        android:layout_marginTop="16dp"
+        android:text="@string/points"
         android:textAlignment="center"
         android:textColor="@android:color/white"
         android:textSize="15sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="@+id/amount_of_points"
         app:layout_constraintStart_toStartOf="@+id/amount_of_points"
-        tools:layout_editor_absoluteY="138dp" />
+        app:layout_constraintTop_toBottomOf="@+id/played_category" />
 
     <TextView
         android:id="@+id/textView2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
         android:text="@string/correct_answers"
         android:textAlignment="center"
         android:textColor="@android:color/white"
@@ -75,7 +78,7 @@
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="@+id/amount_of_correct_answers"
         app:layout_constraintStart_toStartOf="@+id/amount_of_correct_answers"
-        tools:layout_editor_absoluteY="138dp" />
+        app:layout_constraintTop_toBottomOf="@+id/played_category" />
 
     <TextView
         android:id="@+id/save_amount_of_statements_result"
@@ -108,12 +111,12 @@
         android:id="@+id/amount_of_points"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="15dp"
         android:textColor="@android:color/white"
-        android:textSize="60sp"
+        android:textSize="70sp"
         android:textStyle="bold"
-        app:layout_constraintRight_toLeftOf="@+id/amount_of_correct_answers"
         app:layout_constraintLeft_toRightOf="@+id/save_amount_of_statements_result"
+        app:layout_constraintRight_toLeftOf="@+id/amount_of_correct_answers"
         app:layout_constraintTop_toBottomOf="@+id/textView2"
         tools:text="5" />
 
