--- a/app/src/main/res/layout/item_statement_list.xml
+++ b/app/src/main/res/layout/item_statement_list.xml
@@ -37,6 +37,17 @@
                 app:layout_constraintTop_toTopOf="parent"
                 tools:text="Zlatan is a hockey player" />
 
+            <ImageButton
+                android:id="@+id/deleteButton"
+                android:layout_width="wrap_content"
+                android:layout_height="0dp"
+                android:background="#FE9E9E"
+                android:contentDescription="Delete statement"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:srcCompat="@android:drawable/ic_menu_delete" />
+
         </android.support.constraint.ConstraintLayout>
 
     </android.support.v7.widget.CardView>
