--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,5 @@
     <color name="colorAccent">#4fc11550</color>
     <color name="ButtonBackground">#2b543a53</color>
     <color name="PressedButtonBackground">#ce543a53</color>
+    <color name="white">#FFFFFF</color>
 </resources>
