--- a/app/src/main/res/layout/activity_sms.xml
+++ b/app/src/main/res/layout/activity_sms.xml
@@ -26,7 +26,7 @@
 
     <EditText
         android:id="@+id/enter_nr"
-        android:layout_width="218dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="80dp"
         android:ems="10"
@@ -39,7 +39,7 @@
 
     <EditText
         android:id="@+id/enter_message"
-        android:layout_width="218dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
         android:ems="10"
