Add: ButtonSwitcher for Single/multiplayer-buttons

--- a/app/src/main/res/layout/activity_singleplayer_game.xml
+++ b/app/src/main/res/layout/activity_singleplayer_game.xml
@@ -95,7 +95,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_margin="8dp"
-            android:background="@drawable/button_shape"
+            android:background="@drawable/button_shape_switcher"
             android:onClick="trueButtonPressed"
             android:text="@string/true_statement"
             android:textSize="20sp"
@@ -109,7 +109,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_margin="8dp"
-            android:background="@drawable/button_shape"
+            android:background="@drawable/button_shape_switcher"
             android:onClick="falseButtonPressed"
             android:text="@string/false_statement"
             android:textSize="20sp"
