--- a/app/src/main/res/layout/dropdown_list_item.xml
+++ b/app/src/main/res/layout/dropdown_list_item.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent">
 
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/text_all_categories"
         android:layout_width="0dp"
         android:layout_height="49dp"
         android:layout_marginEnd="4dp"
