--- a/app/src/main/res/drawable/main_background.xml
+++ b/app/src/main/res/drawable/main_background.xml
@@ -2,7 +2,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
     <gradient
-        android:startColor="#fdfefe"
+        android:startColor="#fadada"
         android:endColor="#fe8787"
         android:angle="90" />
 </shape>
