--- a/app/src/main/res/drawable/main_background_blue.xml
+++ b/app/src/main/res/drawable/main_background_blue.xml
@@ -2,7 +2,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
     <gradient
-        android:startColor="#f1abab"
-        android:endColor="#ef5d5d"
+        android:startColor="#9797fd"
+        android:endColor="#3131f2"
         android:angle="90" />
 </shape>
