--- a/app/src/main/res/layout/activity_category_window.xml
+++ b/app/src/main/res/layout/activity_category_window.xml
@@ -28,11 +28,11 @@
         android:id="@+id/button_sport"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="32dp"
+        android:layout_marginTop="8dp"
         android:onClick="categoryButtonPressed"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toLeftOf="@+id/button_music"
-        app:layout_constraintTop_toBottomOf="@+id/top_text"
+        app:layout_constraintTop_toBottomOf="@+id/spinner_player2"
         app:srcCompat="@drawable/sport_switcher" />
 
     <TextView
@@ -49,11 +49,11 @@
         android:id="@+id/button_music"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="35dp"
+        android:layout_marginTop="11dp"
         android:onClick="categoryButtonPressed"
         app:layout_constraintLeft_toRightOf="@+id/button_sport"
         app:layout_constraintRight_toLeftOf="@+id/button_food"
-        app:layout_constraintTop_toBottomOf="@+id/top_text"
+        app:layout_constraintTop_toBottomOf="@+id/spinner_player2"
         app:srcCompat="@drawable/music_switcher" />
 
     <TextView
@@ -70,11 +70,11 @@
         android:id="@+id/button_food"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="35dp"
+        android:layout_marginTop="11dp"
         android:onClick="categoryButtonPressed"
         app:layout_constraintLeft_toRightOf="@+id/button_music"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/top_text"
+        app:layout_constraintTop_toBottomOf="@+id/spinner_player2"
         app:srcCompat="@drawable/food_switcher" />
 
     <TextView
@@ -207,5 +207,27 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
+
+    <Spinner
+        android:id="@+id/spinner_player_1"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:background="@null"
+        android:spinnerMode="dialog"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/top_text" />
+
+    <Spinner
+        android:id="@+id/spinner_player2"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:background="@null"
+        android:spinnerMode="dialog"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/spinner_player_1" />
 
 </android.support.constraint.ConstraintLayout>
