--- a/app/src/main/res/layout/activity_result.xml
+++ b/app/src/main/res/layout/activity_result.xml
@@ -120,19 +120,17 @@
         app:layout_constraintTop_toBottomOf="@+id/textView2"
         tools:text="5" />
 
-    <EditText
-        android:id="@+id/editText_save_highscore_name"
+    <TextView
+        android:id="@+id/player_name"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginBottom="16dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:ems="10"
-        android:hint="@string/insert_name_hint"
-        android:inputType="textPersonName"
         android:textAlignment="center"
         android:textColor="@android:color/white"
-        android:textSize="24sp"
+        android:textSize="36sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/button_save_highscore"
         app:layout_constraintEnd_toEndOf="parent"
